Corrijo formulario de eventos

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
   <style>
-    .texto-no-disponible { color:#fff; }
-    .texto-en-proceso { color:#fff; } /* si querés negro: color:#000; */
+    .texto-no-disponible { color:#f80505; }
+    .texto-en-proceso { color:#00ff40; } 
 
     .btn-negro {
       background:#000; color:#fff; font-weight:700; border:0; padding:5px 10px; border-radius:4px;
