--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -72,7 +72,7 @@
                     >
                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                {% navbar_link 'events' 'Eventos' %}
+                                {% navbar_link 'events' 'Ver todos' %}
                             </li>
                             <li class="nav-item">
                                 {% navbar_link 'panel_admin:admin_dashboard' 'Administradores y Vendedores' %}
