--- a/panel_admin/templates/base_admin.html
+++ b/panel_admin/templates/base_admin.html
@@ -40,7 +40,7 @@
 
         <div class="collapse navbar-collapse" id="navbar-content">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">{% navbar_link 'events' 'Eventos' %}</li>
+            <li class="nav-item">{% navbar_link 'events' 'Ver todos' %}</li>
             <li class="nav-item">{% navbar_link 'panel_admin:admin_dashboard' 'Administradores y Vendedores' %}</li>
             {% if request.user.is_anonymous %}
                                 
